--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".HandlerActivity">
+        <activity android:name=".NotificationActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".SQLActivity">
 
         </activity>
-        <activity android:name=".MenuActivity">
-
-        </activity>
-        <activity android:name=".PermissionActivity"></activity>
+        <activity android:name=".HandlerActivity" />
+        <activity android:name=".MenuActivity" />
+        <activity android:name=".PermissionActivity" />
         <activity android:name=".AsyncHttpActivity" />
         <activity android:name=".HTTPConnetActivity" />
         <activity android:name=".TestActivity" />
@@ -34,14 +41,7 @@
         <activity android:name=".SayValidActivity" />
         <activity android:name=".SubmitActivity" />
         <activity android:name=".SecondActivity" />
-        <activity android:name=".MainActivity" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <action android:name="android.intent.action.VIEW" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".MainActivity"></activity>
 
         <receiver android:name=".TestBroadCastReceiver">
             <intent-filter>
